plugins {
    id("java")
    id "application"
    id("com.gradleup.shadow") version "8.3.1"
}
group = "me.rainma22.Raymond"
application.mainClass = group + "." + "Main"

version = "1.0-SNAPSHOT"
String jdaVersion = "5.6.+"
String newPipeVer = "v0.24.+"

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation("net.dv8tion:JDA:$jdaVersion")
    implementation('ch.qos.logback:logback-classic:1.5.13')
    implementation("com.github.teamnewpipe:NewPipeExtractor:$newPipeVer")
    implementation "org.apache.commons:commons-lang3:3.17.0"
    implementation 'org.json:json:20240303'

    testImplementation(platform("org.junit:junit-bom:5.10.0"))
    testImplementation("org.junit.jupiter:junit-jupiter")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
//    options.isIncremental = true
    options.compilerArgs << "-Xlint:deprecation"
    // Set this to the version of java you want to use,
    // the minimum required for JDA is 1.8
    sourceCompatibility = "11"
}

tasks.test {
    useJUnitPlatform()
}